--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -14,6 +14,8 @@ $color-blue-lit: #c2e2ff;
 $color-red-lit: #ffcaca;
 $color-green-lit: #b4ffb4;
 
+$color-bg: $color-black;
+
 $color-water: #9999ff;
 $color-ground: #ffe699;
 $color-treasure: #F99C2D;
